# pytesimint

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_binaries.yml  testing.yml
dev_tests/: test_analyse_results.py  test_define_matrix.py  test_effective_diffusivity.py  test_iteration.py
pytesimint/: PRAM.py  analyse_results.py  define_matrix.py  effective_diffusivity.py  iteration.py
src/pytesimint/: effective_diffusivity.py
tests/: context.py  setup_path.py  test_def_mat_unit.py  test_ed.py  test_iter.py
