[project]
authors = [{name = "Maeve Murphy Quinlan", email = "earmmu@leeds.ac.uk"}]
description = "Add a short description here"
name = "pytesimint"
requires-python = ">= 3.9"
version = "0.1.0"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pytesimint = { path = ".", editable = true }
build=">=1.2.2.post1,<2"

[tool.pixi.dependencies]
numpy = ">=2.0.2,<3"
numba = ">=0.60.0,<0.61"
matplotlib = ">=3.9.2,<4"
pandas = ">=2.2.3,<3"
scipy = ">=1.14.1,<2"


[tool.pixi.feature.test.dependencies]
pytest = "*"
black = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
test = ["test"]
